# riverr

./: .gitignore  README.md  pyproject.toml  seeds.opml
riverr/: cli.py
riverr/core/: _fixtures.py  app_base.py  config.py  extract.py  feeds.py  fetch.py  images.py  keys.py  links.py  logging.py  models.py  opml.py  render.py  retention.py  search.py  settings.py
riverr/core/storage/: __init__.py  db.py  feeds.py  fetch_log.py  items.py  search.py
riverr/variants/v7_river_plus/: __init__.py  app.py  behavior.py  body.py  edit_modal.py  rows.py  style.py
tests/: conftest.py  test_app_base.py  test_cli.py  test_extract.py  test_images.py  test_keys.py  test_links.py  test_logging.py  test_opml.py  test_opml_sync.py  test_render.py  test_retention.py  test_search.py  test_settings.py  test_storage.py  test_v7_body.py
tests/fixtures/: cbc.xml  cbc_article.html  cna.xml  cna_article.html  df.xml  df_linked.html  hn_article.html  hnrss.xml
tests/pilot/: test_v7.py
